每周工作汇报填写说明

--- a/weekly report/readme
+++ b/weekly report/readme
@@ -1,1 +1,7 @@
 
+请按每周工作汇报模板填写周工作、与项目相关性(参加项目的同学填写，暂时没项目的同学不用填写)、计划完成度、完成自我评价打分并说明理由，并在最后的汇总表里给自己打分，最后
+一栏任务完成度是导师给学生的打分，请大家空着。
+
+模板中红色部分是需要大家填写的，该表格请大家每周一通过实验室研究生微信群发给我或直接上传到Lab-stuff/weekly report/目录里
+
+文件名称格式
