--- a/weekly report/readme
+++ b/weekly report/readme
@@ -5,3 +5,4 @@
 模板中红色部分是需要大家填写的，该表格请大家每周一通过实验室研究生微信群发给我或直接上传到Lab-stuff/weekly report/目录里
 
 文件名称格式
+工作周报_xxx(汇报人姓名)_xxx(日期)-xxx(日期) 如：工作周报_xxx_2018-11-05-208-11-11
